added twitter widget js to header

--- a/pages/answer-the-question-of-a-random-stranger/index.html
+++ b/pages/answer-the-question-of-a-random-stranger/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "Answer the question of a random stranger"
-description: ""
+description: "Answer the question of a random stranger"
 ---
 {% include JB/setup %}
 
