--- a/pages/wish-a-random-stranger-happy-new-year/index.html
+++ b/pages/wish-a-random-stranger-happy-new-year/index.html
@@ -53,7 +53,7 @@ color:#000000;
 </style>
 
 
-Disclaimer: I shall not be liable for all the time that you spend enjoying answering questions of random strangers. 
+Disclaimer: I shall not be liable for all the time that you spend enjoying wishing random strangers. 
 <br>
 
 <!-- Begin: adBrite, Generated: 2012-12-26 1:52:37  -->
